# drcandy-project

./: .gitignore  CMakeLists.txt  Makefile  README.md  run.bat  run.sh
src/: board.cpp  board.h  candy.cpp  candy.h  controller.cpp  controller.h  game.cpp  game.h  graphics.cpp  graphics.h  main.cpp  util.cpp  util.h
src/private/sdl_wrapper/: debug.cpp  debug.h  error.h  image_png.cpp  image_png.h  keyboard.cpp  keyboard.h  keyboard_sdl.h  libreria.h  mouse.cpp  mouse.h  sound.cpp  sound.h  sprites.cpp  sprites.h  stb_vorbis.cpp  stb_vorbis.h  video.cpp  video.h
src/private/sdl_wrapper/NFont/: NFont.h  SDL_FontCache.cpp  SDL_FontCache.h
test/: test.cpp  test.h
visual_studio/0. Windows Desktop/: P2_Lab.sln  P2_Lab.vcxproj  P2_Lab.vcxproj.filters  README.md
visual_studio/0. Windows Desktop/Program/: README.md
visual_studio/0. Windows Desktop/extlibs/: README.md
